k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inference
  labels:
    component: inference
